@@ -379,11 +379,11 @@ if {[file exists ${_featuresinit}]} {
 ### set subdirmode	0755
 
 # By default, if a ccb is present it is saved for the files in the
-# spool directory. A value of 1 indicates to strip the ccb.
-# If this parameter is changed a similar parameter has to be set
-# in the filters (see common(ccbsaved) in filters.conf).
+# spool directory. A value of 1 here indicates to strip the ccb.
+# If this parameter is changed, then the parameter common(ccbsaved)
+# has to be changed in filters.conf for the filters.
 #
-### set saveframefmt	0
+### set spoolsavefmt	0
 
 # How often to re-compute the statistics saved in the status file (in seconds)
 #
