@@ -117,7 +117,7 @@ static int estart_activepce(struct nbs1_packet_st *nbs){
     pce->ts.tv_nsec = 0;
   }
 
-  pce->save_format = g.saveframefmt;
+  pce->save_format = g.spoolsavefmt;
   pce->saveunz_flag = 0;	/* determined below */
   pce->rtxdb_flag = 0;		/* managed in the processor, not here */
 
